Fixed alignment

--- a/assets/styles/src/partials/_globals.scss
+++ b/assets/styles/src/partials/_globals.scss
@@ -7,6 +7,7 @@
 }
 
 .browser-body {
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
 }
